@@ -1,5 +1,12 @@
 2006-08-10  Al Riddoch  <alriddoch@zepler.org>
 
+	* Mercator/Forest.cpp, Mercator/Forest.h: Shuffle the namespacing
+	  around a little to make code less verbose and clearer.
+
+	* tests/testForest.cpp: Add tests to cover the new species code.
+
+2006-08-10  Al Riddoch  <alriddoch@zepler.org>
+
 	* Mercator/Forest.cpp, Mercator/Forest.h, Mercator/Plant.h:
 	  First pass at re-implementing the forest code as a flexible
 	  general case, rather than a quick hack.
